trunk/tests/kiama/negative/type_errors/L2/10_badfor1.ob
MODULE badfor;

CONST
    aconst = 10;

VAR
    avar : INTEGER;

BEGIN
    FOR aconst := 1 TO 10 DO
        avar := 1
    END
END badfor.
